# NetSim

./: CMakeLists.txt  README.md  UML.txt
include/: config.hpp  factory.hpp  global_functions_mock.hpp  helpers.hpp  nodes.hpp  nodes_mocks.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_Factory.cpp  test_netsim.cpp  test_reports.cpp
